# VoxelOps

./: .gitignore  CMakeLists.txt  CMakePresets.json  HILLAIRE_D3D11_PARITY_README.md  README.md  imgui.ini  start_client.bat  start_server.bat
Models/MinecraftPlayer/: Player.fbx
Models/Sniper/: TC Compass.mtl
Shared/: CMakeLists.txt
Shared/gun/: GunType.hpp
Shared/items/: Items.cpp  Items.hpp
Shared/network/: PacketType.hpp  Packets.cpp  Packets.hpp
Shared/player/: BlockPlace.hpp  HitboxCache.cpp  HitboxCache.hpp  Inventory.cpp  Inventory.hpp  MeshHitCache.cpp  MeshHitCache.hpp  MovementSimulation.hpp  PlayerData.cpp  PlayerData.hpp
Shared/runtime/: Paths.cpp  Paths.hpp
VoxelOps/: CMakeLists.txt  main.cpp
VoxelOps-Headless/: CMakeLists.txt  server_main.cpp
VoxelOps-Headless/ExternLibs/skarupke/: unordered_map.hpp
VoxelOps-Headless/application/: VoxelopsApp.cpp  VoxelopsApp.hpp
VoxelOps-Headless/graphics/: ChunkManager.cpp  ChunkManager.hpp  WorldGen.cpp  WorldGen.hpp
VoxelOps-Headless/gun/: Gun.cpp  Gun.hpp
VoxelOps-Headless/input/: InputCallbacks.cpp  InputCallbacks.hpp
VoxelOps-Headless/network/: ChunkStore.cpp  ChunkStore.hpp  CompressChunk.cpp  CompressChunk.hpp  ServerNetwork.cpp  ServerNetwork.hpp  ServerNetworkCallbacks.cpp  ServerNetworkChunkPipeline.cpp  ServerNetworkPersistence.cpp  WorldItemPhysics.cpp  WorldItemPhysics.hpp
VoxelOps-Headless/physics/: Physics.cpp  RayManager.cpp  RayManager.hpp  Raycast.hpp
VoxelOps-Headless/player/: Hitbox.cpp  PlayerManager.cpp  PlayerManager.hpp  ServerPlayer.hpp
VoxelOps-Headless/voxels/: ServerChunk.cpp  ServerChunk.hpp  Voxel.cpp  Voxel.hpp
VoxelOps/ExternLibs/skarupke/: bytell_hash_map.hpp
VoxelOps/application/: App.cpp  App.hpp  AppHelpers.cpp  AppHelpers.hpp  AppLifecycle.cpp  AppSetup.cpp  AppSimulation.cpp  AppUi.cpp  AppWindow.cpp  VoxelopsApp.cpp  VoxelopsApp.hpp  WorldItemRenderer.cpp  WorldItemRenderer.hpp
VoxelOps/data/: GameData.cpp  GameData.hpp
VoxelOps/graphics/: Backend.cpp  Backend.hpp  Camera.cpp  Camera.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkRenderSystem.cpp  ChunkRenderSystem.hpp  Frustum.hpp  Lighting.cpp  Lighting.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PostProcessor.hpp  RegionMeshBuffer.cpp  RegionMeshBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sky.cpp  Sky.hpp  TextureAtlas.cpp  TextureAtlas.hpp  WorldGen.cpp  WorldGen.hpp
VoxelOps/gun/: Gun.cpp  Gun.hpp
VoxelOps/input/: InputCallbacks.cpp  InputCallbacks.hpp
VoxelOps/misc/: ThreadPool.cpp  ThreadPool.hpp
VoxelOps/network/: ClientNetwork.cpp  ClientNetwork.hpp  DecompressChunk.cpp  DecompressChunk.hpp
VoxelOps/physics/: Physics.hpp  RayManager.cpp  RayManager.hpp  Raycast.cpp
VoxelOps/player/: Hitbox.hpp  Player.cpp  Player.hpp
VoxelOps/runtime/: ClientReconciler.cpp  ClientReconciler.hpp  Runtime.hpp  SnapshotInterpolator.cpp  SnapshotInterpolator.hpp
VoxelOps/shaders/: allLightingFrag.frag  allLightingPack.frag  allLightingPack.vert  allLightingPack33.frag  allLightingPack33.vert  allLightingVert.vert  noLightingFrag.frag  noLightingVert.vert  onlyAOFrag.frag  onlyAOVert.vert  player.frag  player.vert  postprocess_tonemap.frag  secondFragment.frag  secondVertex.vert  sky.frag  sky.vert  sky_hillaire_luts.frag  sky_simple.frag
VoxelOps/ui/debug/: DebugUi.cpp  DebugUi.hpp
VoxelOps/ui/player/: Crosshair.cpp  Crosshair.hpp  InventoryUI.cpp  InventoryUI.hpp
VoxelOps/voxels/: Chunk.cpp  Chunk.hpp  ChunkColumn.cpp  ChunkColumn.hpp  Voxel.cpp  Voxel.hpp
